java,cs,lua example gen, run ok